# online-cinema

./: .env.sample  README.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  pyproject.toml
commands/: run_migration.sh
docker/tests/: Dockerfile
src/: main.py
src/config/: __init__.py  celery.py  dependencies.py  settings.py
src/database/: __init__.py  postgresql.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: migration.py
src/database/models/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py
src/database/validators/: accounts.py
src/exceptions/: __init__.py  storage.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_request.html  password_change.html  send_cancellation.html  send_payment.html  send_refund.html
src/routes/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py  profiles.py
src/schemas/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py  profiles.py
src/security/: http.py  interfaces.py  passwords.py  token_manager.py
src/storages/: interfaces.py  s3.py
src/validation/: __init__.py  profile.py
